# pi-rfid

./: .gitignore  CardReader.cpp  CardReader.h  MFRC522.cpp  Makefile  README.rst  Read.cpp  install-systemd.sh  install_bcm.sh  interface  main.cpp  pi-rfid.service  test_remote
extras/: Cipher.cpp  Redis.cpp  SocketClient.cpp  SocketServer.cpp  socket_client  testSocketClient.cpp  testSocketServer.cpp
py-rfid/: README.md  RFID.py  main.py
src/: CardReader.cpp  CardReader.h  ConsoleMenu.cpp  ConsoleMenu.h  Makefiletest  NetworkServer.cpp  NetworkServer.h  SecurityTag.cpp  SecurityTag.h  server_test
src/interface/: .gitignore  App.cc  App.h  AppLogger.h  BaseWindow.cc  BaseWindow.h  ControlsWindow.cc  ControlsWindow.h  LoginWindow.cc  LoginWindow.h  Makefile  NetworkClient.cc  NetworkClient.h  app  app.desktop.in  app.gresource.xml  interface  interface.cc  interface.h  main.cc  meson.build
src/mfrc522/: MFRC522.cpp
tests/: ReadNUID.cpp
